[project]
name = "banner_tbongkim03"
version = "0.2.0"
description = "banner project"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = [
    "pyfiglet>=1.0.2",
]
requires-python = ">=3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
